[tool.poetry]
name = "agents-ollama"
version = "0.1.0"
description = ""
authors = ["Belg PC <tomsomoza911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.4"
llama-index-llms-ollama = "^0.3.4"
llama-index = "^0.11.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
